# PKU-Planner-Vibe-Version

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
.deepseek/: instructions.md
.github/workflows/: ci.yml
components/: coursecellwidget.cpp  coursecellwidget.h
dialogs/: confirmdialog.cpp  confirmdialog.h  courseeditdialog.cpp  courseeditdialog.h  logindialog.cpp  logindialog.h  taskeditdialog.cpp  taskeditdialog.h
models/: course.h  datamanager.cpp  datamanager.h  task.h  taskmodel.cpp  taskmodel.h
pages/: dashboardpage.cpp  dashboardpage.h  settingspage.cpp  settingspage.h  statspage.cpp  statspage.h  todopage.cpp  todopage.h
services/: configservice.cpp  configservice.h  teachingplatformservice.cpp  teachingplatformservice.h  weeklysummaryservice.cpp
ui/: sidebarwidget.cpp  sidebarwidget.h  topbarwidget.cpp  topbarwidget.h
widgets/coursedetail/: coursedetaildrawer.h  coursetaskpage.cpp
widgets/dialogs/: weeklysummarydialog.cpp  weeklysummarydialog.h
widgets/onboarding/: onboardingdialog.cpp  onboardingdialog.h
widgets/search/: searchpopup.cpp  searchpopup.h
